111
- chrome: update to 96.0.4664.45
- pango: update to 1.49.3

110
- fix dark mode toggle
- versions >=91 use new flags to enable hardware accelerated video decode
- allow setting a custom user-agent
- use pulseaudio when available

109
- chrome: update to 95.0.4638.54
- at-spi2-core: update to 2.42.0
- cups: update to 2.3.3op2

108
- chrome: update to 93.0.4577.63
- harfbuzz: update to 2.9.0
- icu: update to 69.1
- itstool: to 2.0.7
- jasper: update to 2.0.33
- libXft: update to 2.3.4
- pango: update to 1.49.1

107
- chrome: update to 92.0.4515.107
- at-spi2-core: update to 2.40.3
- gdk-pixbuf: update to 2.42.6
- gtk3: update to 3.24.30
- pango: update to 1.48.7

106
- chrome: update to 91.0.4472.114

105
- at-spi2-core: update to 2.40.0
- chrome: update to 89.0.4389.114
- gdk-pixbuf: update to 2.42.4
- gtk3: disable use of to-pixdata during build
- gtk3: update to 3.24.28
- pango: update to 1.48.4

104
- updated to 87.0.4280

103
- fix getting default audio device

102
- add dark mode at options
- support for latest Chrome

101
- fix download url

100
- initial release