@@ -5,7 +5,7 @@ PKG_NAME="chrome"
 PKG_VERSION="1.0"
 # curl -s http://dl.google.com/linux/chrome/deb/dists/stable/main/binary-amd64/Packages | grep -B 1 Version
 PKG_VERSION_NUMBER="96.0.4664.45"
-PKG_REV="111"
+PKG_REV="112"
 PKG_ARCH="x86_64"
 PKG_LICENSE="Custom"
 PKG_SITE="http://www.google.com/chrome"
