@@ -1,3 +1,6 @@
+112
+- fixed launch problem with configured custom audio devices
+
 111
 - chrome: update to 96.0.4664.45
 - pango: update to 1.49.3
